fix: input label gap styled nicely

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -76,7 +76,7 @@ button:hover {
 .input-item {
   display: flex;
   flex-direction: column;
-  row-gap: 0.1rem;
+  row-gap: 6px;
 }
 
 .icon {
